--- a/API_Documentation.ipynb
+++ b/API_Documentation.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNwj9gp4sLJI2DaceH9Uhsj",
+      "authorship_tag": "ABX9TyOMNqf/AK4Sxfth26qi0rOi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -383,7 +383,7 @@
         "  system_prompt = \"\"\"Please review the code in the repository '{}' and provide a detailed summary\n",
         "                    of the core business use case implemented. Limit your explanation to fewer than 10\n",
         "                    sentences\"\"\".format(github_repo)\n",
-        " # print(system_prompt)\n",
+        "  print(system_prompt)\n",
         "  business_usecase_details = llm.invoke(\n",
         "      [\n",
         "        {  \"role\": \"system\",\n",
@@ -405,7 +405,7 @@
         "                      Only provide the PlantUML code block, starting with @startuml and ending with @enduml.\n",
         "                      for every endpoint in controller class\n",
         "                      \"\"\".format(github_repo)\n",
-        " # print(system_prompt_seq)\n",
+        "  print(system_prompt_seq)\n",
         "  seq_diagram = llm.invoke(\n",
         "      [\n",
         "        {  \"role\": \"system\",\n",
@@ -460,7 +460,7 @@
         "\n",
         "\n",
         "                          # --- Class Diagram Generation ---\n",
-        "  system_prompt_class = \"\"\"\\nPlease review the code in the repository '\"\"\"+github_repo+\"\"\"' and create a class diagram for the same using correct PlantUML syntax.\n",
+        "  system_prompt_class = \"\"\"Please review the code in the repository '\"\"\"+github_repo+\"\"\"' and create a class diagram for the same using correct PlantUML syntax.\n",
         "                        Only provide the PlantUML code block, starting with @startuml and ending with @enduml.\n",
         "                        Ensure correct syntax for classes, attributes, methods, and relationships (inheritance, composition, aggregation, association, etc.).\n",
         "                        Example syntax:\n",
@@ -473,7 +473,7 @@
         "                        ClassE o-- ClassF : aggregation\n",
         "                        ClassG --> ClassH : association\n",
         "                        \"\"\"\n",
-        "  #print(system_prompt_class)\n",
+        "  print(system_prompt_class)\n",
         "  class_diagram = llm.invoke(\n",
         "      [\n",
         "        {  \"role\": \"system\",\n",
@@ -526,13 +526,13 @@
         "\n",
         "\n",
         "                            # --- Endpoint Details ---\n",
-        "  system_prompt_endpoints = \"\"\"\\nPlease review the code in the repository '{}' and provide the following details for each API endpoint:\n",
+        "  system_prompt_endpoints = \"\"\"Please review the code in the repository '{}' and provide the following details for each API endpoint:\n",
         "                            The endpoint path and the corresponding HTTP method\n",
         "                            HTTP requests, including relevant headers and body content where applicable along with a example Request\n",
         "                            HTTP responses, specifying status codes and response bodies along with a example Response\n",
         "                            A summary of the core business logic implemented by the microservice if there us any, if Not mark it as NA\n",
         "                            \"\"\".format(github_repo)\n",
-        "  #print(system_prompt_endpoints)\n",
+        "  print(system_prompt_endpoints)\n",
         "  endpoints_details = llm.invoke(\n",
         "      [\n",
         "        {  \"role\": \"system\",\n",
@@ -548,7 +548,7 @@
         "  endpoints_details_text = endpoints_details.content\n",
         "  document.add_heading(\"Endpoint Details \", level=0)\n",
         "  document.add_paragraph(endpoints_details_text)\n",
-        "  fileName = \"API_Documentation.docx\"\n",
+        "  fileName = \"documentation.docx\"\n",
         "\n",
         "\n",
         "  final_document_path = bold_text_in_word(document, fileName)\n",
